Use DirectWrite font engine for non-ttf fonts as well

DirectWrite supports different font types, not just TTF. In order
to enable e.g. CFF support, we simply remove the test for TTF
which was initially put in to be on the safe side when handling
bitmap fonts. However, using DirectWrite with bitmap fonts also
seems to work fine, so there's no reason to have the fallback.

Task-number: QTBUG-22654
Change-Id: I8572bc421ab3dd223025ea152ba9b33f7cf33a8a
Reviewed-by: Jiang Jiang <jiang.jiang@nokia.com>

cregit: a620b778964158e1e38d780d62cd807276001796 https://github.com/qt/qtbase/commit/a620b778964158e1e38d780d62cd807276001796